assets/css/style.css
/* ... */
.education::before {
    content: "";
    border-left: 2px solid var(--main-text);
    position: absolute;
    top: 0;
    left: 11px;
    bottom: 0;
    z-index: -1;
}
.education {
    display: flex;
    position: relative;
    z-index: 1;
    margin-top: 20px;
}
.small_yellow_border {
    border: 2px solid var(--main-text);
    border-radius: 100%;
    padding: 5px;
    background-color: var(--section-background);
}
.small_yellow_circle {
    width: 10px;
    height: 10px;
    border-radius: 100%;
    background-color: var(--main-text);
}
.bachelor {
    color: var(--main-text);
    font-size: 20px;
    line-height: 28px;
    font-weight: 500;
    text-transform: uppercase;
    margin: 0;
    padding-bottom: 10px;
    transition: all 0.3s;
}
.university {
    padding-bottom: 15px;
    font-size: 18px !important;
}
.cursus {
    color: var(--sub-text);
    font-size: 16px;
    line-height: 24px;
    font-weight: 400;
    transition: all 0.3s;
}
.education:hover .cursus {
    color: var(--main-text);
}
.small_yellow_border_main {
    padding-left: 20px;
}
/*-----------------------[ 13.coding-skill-section CSS ]------------------------*/
.coding-skill-section {
    padding: 60px 0;
}
#progress {
    display: grid;
    grid-template-columns: repeat(5, 1fr);
    margin-top: 30px;
    gap: 20px;
}
.progress-item {
    display: flex;
    width: 146px;
    height: 146px;
    border-radius: 50%;
    font-size: 0;
    animation: .4s ease-out reverse;
    position: relative;
}
.progress-item::after {
    content: attr(data-value)'%';
    display: flex;
    justify-content: center;
    flex-direction: column;
    width: 130px;
    margin: 8px;
    border-radius: 50%;
    background: var(--section-background);
    color: var(--main-text);
    text-align: center;
    font-size: 32px;
    font-style: normal;
    font-weight: 700;
    line-height: 32px;
    text-transform: uppercase;
}
.skill-label {
    position: absolute;
    bottom: -60px;
    font-size: 18px;
    font-weight: 500;
    line-height: 24px;
    color: var(--main-text);
    text-align: center;
    width: 100%;
    display: flex;
    align-items: flex-center;
    justify-content: center;
    height: 50px;
}
/*-----------------------[ 14.design-skill-section CSS ]------------------------*/
.design-skill-sub-section {
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    gap: 20px;
    margin: 30px 0 0 0;
    justify-content: space-between;
}
.design-skills-img-main {
    border-radius: 40px;
    border: 2px solid var(--8, #00CC97);
    background: rgba(0, 204, 151, 0.10);
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 15px;
    max-width: 179px;
    width: 100%;
    height: 80px;
}
.photoshop {
    border: 2px solid #31A8FF;
    background: rgba(49, 168, 255, 0.10);
}
.photoshop-text p:nth-of-type(2) {
    color: var(--1, #31A8FF) !important;
}
.adobe-xd {
    border: 2px solid #FF61F6;
    background: rgba(255, 97, 246, 0.10);
}
.adobe-xd-text p:nth-of-type(2) {
    color: var(--1, #FF61F6) !important;
}
.sketch {
    border: 2px solid #FFDB59;
    background: rgba(255, 219, 89, 0.10);
}
.sketch-text p:nth-of-type(2) {
    color: var(--1, #FFDB59) !important;
}
.skill-counter-main p:first-of-type {
    color: var(--main-text);
    font-size: 26px;
    font-weight: 700;
    line-height: 26px;
    text-transform: uppercase;
    padding-bottom: 5px;
}
.skill-counter-main p:nth-of-type(2) {
    color: var(--8, #00CC97);
    font-size: 14px;
    font-weight: 500;
    line-height: 14px;
}
/*-----------------------[ 15.Award-section CSS ]------------------------*/
.box-item {
    position: relative;
}
.awards-row {
    gap: 24px 0;
    padding-top: 30px;
}
.flip-box {
    -ms-transform-style: preserve-3d;
    transform-style: preserve-3d;
    -webkit-transform-style: preserve-3d;
    perspective: 1000px;
    -webkit-perspective: 1000px;
}
.flip-box-front {
    -ms-transform: rotateY(0deg);
    -webkit-transform: rotateY(0deg);
    transform: rotateY(0deg);
    -webkit-transform-style: preserve-3d;
    -ms-transform-style: preserve-3d;
    transform-style: preserve-3d;
}
.flip-box-front,
.flip-box-back {
    background-size: cover;
    background-position: center;
    min-height: 180px;
    -ms-transition: transform 0.7s cubic-bezier(.4, .2, .2, 1);
    transition: transform 0.7s cubic-bezier(.4, .2, .2, 1);
    -webkit-transition: transform 0.7s cubic-bezier(.4, .2, .2, 1);
    -webkit-backface-visibility: hidden;
    backface-visibility: hidden;
    background: var(--section-background);
    border: 2px dashed var(--primary-color);
    border-radius: 20px;
    transition: all 0.3s ease-in-out;
}
.flip-box-front:hover,
.flip-box-back:hover {
    border: 2px dashed var(--main-text);
    border-radius: 0;
}
.flip-box .inner {
    position: absolute;
    left: 0;
    width: 100%;
    -webkit-perspective: inherit;
    perspective: inherit;
    z-index: 2;
    padding: 20px;
    transform: translateY(-50%) translateZ(60px) scale(.94);
    -webkit-transform: translateY(-50%) translateZ(60px) scale(.94);
    -ms-transform: translateY(-50%) translateZ(60px) scale(.94);
    top: 50%;
}
.award-yer {
    color: var(--sub-text);
    text-align: right;
    font-size: 20px;
    font-weight: 400;
    line-height: 20px;
}
.winner-award {
    max-width: 100%;
    padding: 0 0 20px;
    filter: var(--icons-filter);
}
.years-award-img {
    display: flex;
    justify-content: space-between;
}
.award-interior {
    color: var(--main-text);
    font-size: 24px;
    font-weight: 500;
    line-height: 32px;
}
.award-winner-text {
    color: var(--sub-text);
    font-size: 18px;
    font-weight: 500;
    line-height: 18px;
    text-transform: uppercase;
    padding-top: 10px;
}
/* ... */

